--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "polygon-offset",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Polygon offsetting algorithm, aimed for use with leaflet",
-  "main": "src/offset.js",
+  "module": "src/offset.esm.js",
+  "type": "module",
   "keywords": [
     "polygon",
     "offset",
@@ -16,7 +17,8 @@
   "devDependencies": {
     "@turf/clean-coords": "^6.0.1",
     "browserify": "^13.1.1",
-    "eslint": "^3.8.1",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.9.0",
     "geojson-project": "^1.0.1",
     "http-server": "^0.11.1",
     "leaflet": "^1.0.1",
